--- a/progetto2/index.html
+++ b/progetto2/index.html
@@ -27,7 +27,7 @@
 		  </form>
 
 	      <h2>INFO</h2>
-	      <p>clicca <i><a href="#">qui</a></i> per maggiori info sull'approccio HV</p>
+	      <p>clicca <i><a href="https://github.com/mariocuomo/InfoVis/blob/main/progetto2/HV%20drawing.pdf">qui</a></i> per maggiori info sull'approccio HV</p>
   	      <hr>
   	    <div align="right"> 	
 			<p style="margin-top: 0;color:gray; ">&copy; Mario Cuomo</p>
